objects/tffa__Location__c.object
<CustomObject>
    <description>Named geographical place (such as a branch or terminal) that provides permanent facilities for movement of goods (such as customs, storage, and other support services) or is designated for a stated purpose. Read more: http://www.businessdictionary.com/definition/location.html</description>
    <fields>
        <fullName>CZAvailableInDigital__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the Branch Location is available in Digital Flow</description>
        <label>Available In Digital flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZSDBSalesTaxPct__c</fullName>
        <description>SDB Tax Rate for location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SDB Tax Rate</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>Cost center for location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost center</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISBranchCode__c</fullName>
        <description>Fis branch code for Location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Branch Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The exact address of the location.</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__BicCode__c</fullName>
        <description>BIC stands for Bank Identifier Code. It is an international bank code that identifies particular banks worldwide.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier that is more human friendly.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ContactEmail__c</fullName>
        <description>Contact Email for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContactPhone__c</fullName>
        <description>Contact Phone for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CostCenterCode__c</fullName>
        <description>A cost center is any unit of an organisation to which costs or expenses are allocated to these units</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Center Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the location. Can include purpose, services offered.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id of the brand as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsSafeDepositBoxAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the safe deposit box facility is available at the current location</description>
        <label>Safe Deposit Box Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RoutingNumber__c</fullName>
        <description>Routing number of the branch. An identification number assigned to the banking institution.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Segments__c</fullName>
        <description>A segment typically captures the traits or preferences common to a group of subscribers of a location. 
A location&apos;s segments represent its target audience.</description>
        <label>Segments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__LocationSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Services__c</fullName>
        <description>All the services offered by this location. (comma separate)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Services</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of location. Governs the nature of the location (like type of service provided).</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__LocationType</valueSetName>
        </valueSet>
    </fields>
    <label>Location (branch)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>tffa__RoutingNumber__c</columns>
        <columns>CostCenter__c</columns>
        <columns>FISBranchCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Code__c</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations (branch)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>